tests/errors/surf_num_11.ki
# acosh below 1 is a math domain error.
var m = import("math")
discard m.acosh(0)
